projects/nanousd-labs/nanousd/tests/usda/invalid/asset_ref_newline.usda
#usda 1.0

def Scope "Bad"
{
    asset value = @foo
bar@
}
